manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dragon-name-generator
  annotations:
    imageRegistry: "Amazon ECR"
    app.owner: wops
    app.author: khant-naing-set
  labels:
    app: dragon-name-generator
    version: 0.0.1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dragon-name-generator
  template:
    metadata:
      labels:
        app: dragon-name-generator
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dragon-name-generator-api
          image: nginx:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
