manifests/dragon-name-generator.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragon-name-generator-service
spec:
  selector:
    app: dragon-name-generator
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dragon-name-generator
  annotations:
    imageRegistry: "Amazon ECR"
    app.owner: wops
    app.author: khant-naing-set
  labels:
    app: dragon-name-generator
    version: 0.0.1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dragon-name-generator
  template:
    metadata:
      labels:
        app: dragon-name-generator
    spec:
      containers:
        - name: dragon-name-generator-api
          image: 339712825319.dkr.ecr.us-east-1.amazonaws.com/dragon-name-generator:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
