manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragon-name-generator-service
spec:
  selector:
    app: dragon-name-generator
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
